--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -86,11 +86,11 @@
   gap: 0px 0px;
   grid-template-rows: 1fr;
   grid-template-areas: "left center right";
-  inline-size: 100%;
 }
 .menu-icon {
   grid-area: left;
   justify-self: start;
+  z-index: 200;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -165,7 +165,7 @@
   grid-area: center;
   justify-self: center;
   justify-content: center;
-  z-index: 1;
+  /* z-index: 1; */
   transform: translate3d(0, 0, 0);
   flex: 1;
   vertical-align: top;
