--- a/src/components/Buttons/GotoButton.css
+++ b/src/components/Buttons/GotoButton.css
@@ -26,7 +26,7 @@
   animation-delay: 0.6s;
   display: inline-block;
   vertical-align: top !important;
-  top: 531px;
+  bottom: 90px;
   outline: 0 !important;
   margin-inline: 28px;
   border-radius: 4px !important;
