--- a/src/components/Cars/model.css
+++ b/src/components/Cars/model.css
@@ -1,5 +1,5 @@
 .car-models-wrapper {
-  z-index: 100;
+  z-index: 9999;
   inset: 0;
   backdrop-filter: blur(32px);
   block-size: 100dvh;
@@ -16,11 +16,28 @@
 .back-arrow-container {
   font: normal normal 400 1rem / calc(6px + 2.125ex) "reg";
   hyphens: auto;
-  transform: translate3d(0, 0, 0) !important;
   color-scheme: light dark;
 }
 .models-header-container {
   font: normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) /
     calc(6px + 2.125ex) "semi-bold";
   color-scheme: light dark !important;
+}
+.model-visible {
+  pointer-events: auto;
+  opacity: 1;
+  transform: translateY(0);
+  transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1),
+              opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.model-hidden {
+  pointer-events: none;
+  opacity: 0;
+  transform: translateY(100px);
+  transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1),
+              opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.models-header-container .root{
+  font-family: "semi-bold";
 }
