--- a/src/components/Categorie-items/carmodels.css
+++ b/src/components/Categorie-items/carmodels.css
@@ -1,27 +1,111 @@
-.car-models-container{
-    padding: 0;
-    place-items: center;
-    gap: 12px;
+.models-container {
+  padding-bottom: 16px;
+  inset-block-start: 0;
+  outline: 2px solid #fff;
 }
-.car-models{
-    list-style: none;
-    max-inline-size: 22rem;
-    inline-size: 100%;
-    margin: 0;
-    border: none;
-    border-radius: 4px;
-    border-radius: 4px;
-    margin-left: -2px;
-    margin-right: -2px;
-    padding-left: 2px;
-    padding-right: 2px;
-    transition: background 0.25s cubic-bezier(0.25, 0.1, 0.25, 1);
-    border-radius: 0.5rem;
-    padding-block: 20px;
-    padding-inline: 20px;
-    margin-block: 0;
-    margin-inline: 0;
+.individual-items:hover{
+  background-color: rgba(128, 128, 128, 0.199);
+  border-radius: 4px;
+  transition: background-color .1s cubic-bezier(0.55, 0.085, 0.68, 0.53);
 }
-.modelname-container{
-    
+.close-icon-container {
+  padding-top: 1.125rem;
+  padding-bottom: 16px;
+  margin-bottom: 2px;
+  z-index: 100;
+}
+.individual-cars-container {
+  list-style: none;
+  max-inline-size: 22rem;
+  inline-size: 100%;
+  border-radius: 0.5rem;
+}
+.individual-cars-button {
+  inline-size: 100%;
+  margin: 0;
+  border-radius: 0.5rem;
+  padding: 0;
+  border: none;
+}
+.cars-container {
+  border-radius: 0.5rem;
+  padding: 20px;
+  margin: 0;
+  transition: background 0.25s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+.modelname-container {
+  color-scheme: light dark;
+}
+.car-models-container {
+  padding: 0;
+  place-items: center;
+  gap: 12px;
+  display: grid;
+  border-radius: 0.5rem;
+}
+.modelname {
+  font: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) "semi-bold";
+}
+.carImage-container {
+  margin-top: 4px;
+  inline-size: 100%;
+  aspect-ratio: 160 / 47;
+}
+.carImgae {
+  inset-block-start: 0;
+  inset-block-end: 0;
+  block-size: 100%;
+  /* padding-right: 0.75rem; */
+  inline-size: calc(100% - 0.75rem);
+}
+.carImage-img {
+  block-size: auto;
+  inline-size: 100%;
+  transition: transform 0.24s cubic-bezier(0.25, 0.1, 0.25, 1);
+  backface-visibility: hidden;
+  z-index: 100;
+}
+.cartype-container {
+  margin-top: 8px;
+  block-size: 30px;
+}
+.tag-container {
+  padding-right: 4px;
+}
+.tag-container span {
+  position: relative;
+  display: flex;
+  gap: 2px;
+  padding: 1px 6px;
+  border-radius: 4px;
+  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem) /
+    calc(6px + 2.125ex) "reg";
+  color: #010205;
+  background: #fff;
+  transition: color 0.25s cubic-bezier(0.25, 0.1, 0.25, 1),
+    background-color 0.25s cubic-bezier(0.25, 0.1, 0.25, 1),
+    backdrop-filter 0.25s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+.individual-lists{
+  padding-block-end: 4rem;
+}
+.individual-unorderedlist{
+  padding: 0;
+  margin: 0;
+}
+.cat-lists:first-child{
+  padding-block-start: 0px;
+}
+.cat-lists{
+  text-decoration: none;
+    color: inherit;
+    border-radius: 4px;
+    padding-inline: 11px;
+    font-family: "reg";
+    font-size: 1.25rem;
+    padding-block-start: clamp(21px, 1.25vw + 12px, 36px);
+    transition: background-color 0.25s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+.carImage-img:hover{
+  transform: translateX(10px);
 }
