--- a/src/components/CategoryMenu/Category.css
+++ b/src/components/CategoryMenu/Category.css
@@ -1,5 +1,4 @@
 .category-main-container {
-  z-index: 100;
   inset: 0;
   backdrop-filter: blur(32px);
   block-size: 100dvh;
@@ -15,22 +14,20 @@
 }
 .category-visible {
   opacity: 1;
+  z-index: 10;
   transform: translateX(0);
-  visibility: visible;
   transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1),
     opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .category-hidden {
   opacity: 0;
   transform: translateX(-375px);
-  visibility: hidden;
   transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1),
     opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-  z-index: 1;
 }
 .category-container {
-  padding-top: 1.125rem;
-  padding-bottom: 16px;
+  /* padding-top: 1.125rem; */
+  /* padding-bottom: 16px; */
   inset-block-start: 0;
   outline: 2px solid #fff;
   margin-bottom: 6.5px;
@@ -60,6 +57,7 @@
 }
 .individual-items {
   margin-block-start: 45px;
+  z-index: 100;
   color-scheme: light dark;
   transform: translate3d(0, 0, 0) !important;
 }
@@ -76,7 +74,7 @@
   margin: 0;
   color: #010205;
   text-decoration: none;
-  font: normal normal 400 1rem / calc(6px + 2.125ex) "semi-bold";
+  font: normal normal 400 1rem / calc(6px + 2.125ex) "reg";
   overflow-wrap: break-word;
   hyphens: auto;
   gap: 4px;
