--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -102,13 +102,13 @@
   margin-inline: 0.375rem;
   width: 100%;
   padding: 0;
+  display: flex;
   color: #fbfcff;
   text-decoration: none;
-  font: normal normal 400 1rem / calc(6px + 2.125ex) "Porsche Next",
-    "Arial Narrow", Arial, "Heiti SC", SimHei, sans-serif;
+  font: normal normal 400 1rem / calc(6px + 2.125ex) 'reg';
   overflow-wrap: break-word;
   hyphens: auto;
-  gap: 0;
+  gap: 4px;
   justify-content: flex-start;
   align-items: flex-start;
   font-size: inherit;
@@ -120,7 +120,6 @@
   transform: translate3d(0, 0, 0) !important;
   outline: 0 !important;
   color-scheme: light dark !important;
-  display: inline-block;
   width: auto;
   vertical-align: top;
 }
