--- a/src/components/Categorie-items/carmodels.css
+++ b/src/components/Categorie-items/carmodels.css
@@ -40,7 +40,8 @@
   padding: 0;
   place-items: center;
   gap: 12px;
-  display: grid;
+  flex-direction: column;
+  display: flex;
   border-radius: 0.5rem;
 }
 .modelname {
