--- a/src/components/FeatureCardsSection/Cards.css
+++ b/src/components/FeatureCardsSection/Cards.css
@@ -14,57 +14,127 @@
     --pds-grid-basic-span-two-thirds: span 4;
     --pds-grid-extended-span-one-half: span 3;
     display: grid;
+    padding-bottom: clamp(32px,2.75vw + 23px,76px);
 }
-.individual-cars-container{
+
+.individual-cars-container {
     grid-column: basic-start/basic-end;
+    aspect-ratio: 4 / 3;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: clamp(16px, 12px + 1.25vw, 36px) auto minmax(0px, 1fr) auto clamp(16px, 12px + 1.25vw, 36px);
+    grid-template-columns: clamp(16px, 12px + 1.25vw, 36px) minmax(0px, 1fr) clamp(16px, 12px + 1.25vw, 36px);
+    border-radius: .8rem;
+    grid-template-areas: none;
 }
-.individual-cars-container img{
+
+.individual-cars-container img {
     width: 2560px;
     object-fit: cover;
     cursor: pointer;
     height: auto;
     max-width: 100%;
-    border-radius: .5rem;
+    border-radius: .8rem;
 }
-.cards-container{
+
+.cards-container {
     animation: 1.2s cubic-bezier(0, 0, 0.2, 1) forwards HomeStage__tilesAnimation__1ffaa;
 }
+
 .HomeStage__tilesAnimationStart__1ffaa {
-opacity: 0;
-transform: translateY(30px);
+    opacity: 0;
+    transform: translateY(30px);
 
 }
-.card-text-container{
+
+.card-text-container {
     grid-row-start: 4;
-grid-column-start: 2;
-grid-row-end: auto;
-grid-column-end: auto;
-display: flex;
-row-gap: 16px;
-column-gap: 16px;
-justify-content: space-between;
-align-items: center;
-flex-direction: row;
+    grid-column-start: 2;
+    grid-row-end: auto;
+    grid-column-end: auto;
+    display: flex;
+    row-gap: 16px;
+    column-gap: 16px;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    font-family: "reg";
+    font-weight: 600;
+    letter-spacing: 0px;
 }
+
 p {
-overflow-wrap: break-word;
-hyphens: inherit;
-z-index: 3;
-margin-top: 0px;
-max-width: 34.375rem;
-font-size: inherit;
-font-weight: 600;
-color: rgb(251, 252, 255);
+    overflow-wrap: break-word;
+    hyphens: inherit;
+    z-index: 3;
+    margin-top: 0px;
+    max-width: 34.375rem;
+    font-size: inherit;
+    font-weight: 600;
+    color: rgb(251, 252, 255);
 }
+
 p {
-display: block;
-margin-block-start: 1em;
-margin-block-end: 1em;
-margin-inline-start: 0px;
-margin-inline-end: 0px;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
-.arrow-button{
+
+.arrow-button {
     z-index: 5;
-transform: translate3d(0px, 0px, 0px);
-color-scheme: light dark;
+    transform: translate3d(0px, 0px, 0px);
+    color-scheme: light dark;
+}
+
+.arrow-button .root::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    right: -2px;
+    left: -2px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.arrow-button .root .icon img {
+    color: white;
+}
+
+.individual-cars-container::after {
+    content: "";
+    z-index: 5;
+    grid-row-start: 4;
+    grid-column-start: 1;
+    grid-row-end: 6;
+    grid-column-end: -1;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 8.1%, rgba(0, 0, 0, 0.8) 15.5%, rgba(0, 0, 0, 0.8) 22.5%, rgba(0, 0, 0, 0.78) 29%, rgba(0, 0, 0, 0.73) 35.3%, rgba(0, 0, 0, 0.67) 41.2%, rgba(0, 0, 0, 0.6) 47.1%, rgba(0, 0, 0, 0.52) 52.9%, rgba(0, 0, 0, 0.44) 58.8%, rgba(0, 0, 0, 0.33) 64.7%, rgba(0, 0, 0, 0.22) 71%, rgba(0, 0, 0, 0.12) 77.5%, rgba(0, 0, 0, 0.05) 84.5%, rgba(0, 0, 0, 0.01) 91.9%, rgba(0, 0, 0, 0) 100%);
+    margin-top: calc(-1 * clamp(32px, 23px + 2.75vw, 76px));
+    border-end-start-radius: 12px;
+    border-end-end-radius: 12px;
+}
+
+.individual-image-container {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: -1;
+    grid-column-end: -1;
+    z-index: 4;
+    outline-width: 0px;
+}
+
+.card-text-container p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    z-index: 10;
+}
+.individual-image-container:hover{
+    scale: 1.1;
+    transition: scale 1.2s cubic-bezier(0, 0, 0.2, 1)
 }
