--- a/src/components/Discover/Discover.css
+++ b/src/components/Discover/Discover.css
@@ -1,51 +1,220 @@
-.discover-section{
-    padding-bottom: clamp(48px,3vw + 38px,96px);
+.discover-section {
+  padding-bottom: clamp(48px, 3vw + 38px, 96px);
 }
+
 .discover-header-container{
-    padding-top: clamp(48px,3vw + 38px,96px);
-    padding-bottom: clamp(32px,2.75vw + 23px,76px);
-    row-gap: clamp(8px,.5vw + 6px,16px);
+    padding-top: clamp(48px, 3vw + 38px, 96px);
+    padding-bottom: clamp(32px, 2.75vw + 23px, 76px);
+
 }
-:where(.discover-header-container) {
-    display: grid;
-    margin: 0 var(--pds-internal-grid-margin,0);
-    padding: 0 calc(50% - var(--pds-internal-grid-margin, 0px) - 1280px);
-    grid-gap: clamp(16px,1.25vw + 12px,36px);
-    box-sizing: content-box;
-    grid-template-columns: [full-start] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start extended-start basic-start narrow-start] repeat(6,minmax(0,1fr)) [narrow-end basic-end extended-end wide-end] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
-    max-width: var(--pds-internal-grid-width-max,2560px);
-    min-width: var(--pds-internal-grid-width-min,320px);
-    --pds-internal-grid-safe-zone: max(22px,10.625vw - 12px);
-    --pds-grid-basic-span-one-half: span 3;
-    --pds-grid-basic-span-one-third: span 2;
-    --pds-grid-narrow-span-one-half: span 3;
-    --pds-grid-basic-span-two-thirds: span 4;
-    --pds-grid-extended-span-one-half: span 3;
+:where(.discover-header-containe) {
+  display: grid;
+  margin: 0 var(--pds-internal-grid-margin, 0);
+  padding: 0 calc(50% - var(--pds-internal-grid-margin, 0px) - 1280px);
+  grid-gap: clamp(16px, 1.25vw + 12px, 36px);
+  box-sizing: content-box;
+  grid-template-columns: [full-start] minmax(
+      0,
+      var(
+        --pds-internal-grid-outer-column,
+        calc(
+          var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)
+        )
+      )
+    ) [wide-start extended-start basic-start narrow-start] repeat(
+      6,
+      minmax(0, 1fr)
+    ) [narrow-end basic-end extended-end wide-end] minmax(
+      0,
+      var(
+        --pds-internal-grid-outer-column,
+        calc(
+          var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)
+        )
+      )
+    ) [full-end];
+  max-width: var(--pds-internal-grid-width-max, 2560px);
+  min-width: var(--pds-internal-grid-width-min, 320px);
+  --pds-internal-grid-safe-zone: max(22px, 10.625vw - 12px);
+  --pds-grid-basic-span-one-half: span 3;
+  --pds-grid-basic-span-one-third: span 2;
+  --pds-grid-narrow-span-one-half: span 3;
+  --pds-grid-basic-span-two-thirds: span 4;
+  --pds-grid-extended-span-one-half: span 3;
 }
-.discover-text{
-    grid-column: basic-start/basic-end;
-    font: normal normal 600 clamp(1.6rem,1.56vw + 1.29rem,3.16rem)/ calc(6px + 2.125ex) "semi-bold";
+.discover-text {
+  grid-column: basic-start/basic-end;
+  font: normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem) /
+    calc(6px + 2.125ex) "semi-bold";
 }
-.individual-items-discover{
-    grid-column: basic-start/basic-end;
-    animation: Teaser__tilesAnimation__f5ff7 1.2s cubic-bezier(0,0,.2,1) forwards;
+.individual-items-discover {
+  grid-column: basic-start/basic-end;
+  animation: Teaser__tilesAnimation__f5ff7 1.2s cubic-bezier(0, 0, 0.2, 1)
+    forwards;
 }
 
 .Teaser__tilesAnimationStart__f5ff7 {
-opacity: 0;
-transform: translateY(30px);
+  opacity: 0;
+  transform: translateY(30px);
 }
-.discover-tile{
-grid-template-columns: minmax(0,1fr);
-grid-template-rows: auto auto;
-hyphens: none;
+.discover-tile {
+  grid-template-columns: minmax(0, 1fr);
+  grid-template-rows: auto auto;
+  hyphens: none;
 }
-.discover-tile .root{
-    aspect-ratio: 16 / 9;
+  .container {
+  aspect-ratio: 16 / 9;
+  z-index: 5;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: clamp(16px, 12px + 1.25vw, 36px) auto minmax(0px, 1fr) auto clamp(
+      16px,
+      12px + 1.25vw,
+      36px
+    );
+  grid-template-columns: clamp(16px, 12px + 1.25vw, 36px) minmax(0px, 1fr) clamp(
+      16px,
+      12px + 1.25vw,
+      36px
+    );
+  grid-template-areas: none;
+}
+.picture-container {
+  position: relative;
+  grid-row-start: 1;
+  grid-column-start: 1;
+  grid-row-end: -1;
+  grid-column-end: -1;
+  z-index: 1;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+.container::after {
+  content: "";
+  z-index: 2;
+  grid-row-start: 4;
+  grid-column-start: 1;
+  grid-row-end: 6;
+  grid-column-end: -1;
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0.8) 8.1%,
+    rgba(0, 0, 0, 0.8) 15.5%,
+    rgba(0, 0, 0, 0.8) 22.5%,
+    rgba(0, 0, 0, 0.78) 29%,
+    rgba(0, 0, 0, 0.73) 35.3%,
+    rgba(0, 0, 0, 0.67) 41.2%,
+    rgba(0, 0, 0, 0.6) 47.1%,
+    rgba(0, 0, 0, 0.52) 52.9%,
+    rgba(0, 0, 0, 0.44) 58.8%,
+    rgba(0, 0, 0, 0.33) 64.7%,
+    rgba(0, 0, 0, 0.22) 71%,
+    rgba(0, 0, 0, 0.12) 77.5%,
+    rgba(0, 0, 0, 0.05) 84.5%,
+    rgba(0, 0, 0, 0.01) 91.9%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  margin-top: calc(-1 * clamp(32px, 23px + 2.75vw, 76px));
+  border-end-start-radius: 12px;
+  border-end-end-radius: 12px;
+}
+.discover-footer {
+  grid-row-start: 4;
+  grid-column-start: 2;
+  grid-row-end: auto;
+  grid-column-end: auto;
+  display: flex;
+  row-gap: 16px;
+  column-gap: 16px;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.discover-footer p {
+  overflow-wrap: break-word;
+  hyphens: inherit;
+  z-index: 3;
+  margin: 0px;
+  max-width: 34.375rem;
+  font-size: clamp(1.13rem, 1.08rem + 0.21vw, 1.33rem);
+  font-weight: 400;
+  color: rgb(251, 252, 255);
+  font-family: "reg";
+}
+.discover-arrow img{
+    display: flex;
 width: 100%;
-height: 100%;
-display: grid;
-grid-template-rows: clamp(16px, 12px + 1.25vw, 36px) auto minmax(0px, 1fr) auto clamp(16px, 12px + 1.25vw, 36px);
-grid-template-columns: clamp(16px, 12px + 1.25vw, 36px) minmax(0px, 1fr) clamp(16px, 12px + 1.25vw, 36px);
-grid-template-areas: none;
+padding-top: 0px;
+margin-top: 0px;
+color: rgb(251, 252, 255);
+text-decoration-line: none;
+overflow-wrap: break-word;
+hyphens: auto;
+row-gap: 0px;
+column-gap: 0px;
+justify-content: flex-start;
+align-items: flex-start;
+font-size: 1rem;
+}
+.icon{
+    width: round(down, 2.125ex + 6px, 1px);
+height: round(down, 2.125ex + 6px, 1px);
+z-index: 5;
+}
+.icon img{
+    display: block;
+margin-top: 0px;
+padding-top: 0px;
+pointer-events: none;
+filter: var(--p-internal-icon-filter,invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg) brightness(110%) contrast(110%));
+animation-duration: 1ms;
+animation-timing-function: ease;
+animation-delay: 0s;
+z-index: 115;
+animation-iteration-count: 1;
+animation-direction: normal;
+animation-fill-mode: none;
+animation-play-state: running;
+animation-name: rerender-dark-primary;
+width: inherit;
+height: inherit;
+}
+.picture-container img{
+  transition: scale .5s ease;
+}
+.picture-container img:hover{
+    scale: 1.1;
+}
+
+@media (min-width:760px) {
+    :where(.discover-header-containe){
+      grid-template-columns: [full-start] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(2, minmax(0, 1fr)) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(2, minmax(0, 1fr)) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
+        --pds-internal-grid-safe-zone: calc(5vw - 16px);
+        --pds-grid-basic-span-one-half: span 6;
+        --pds-grid-basic-span-one-third: span 4;
+        --pds-grid-narrow-span-one-half: span 4;
+        --pds-grid-basic-span-two-thirds: span 8;
+        --pds-grid-extended-span-one-half: span 7;
+    }
+}
+@media (min-width:1000px) {
+    .individual-items-discover:first-child{
+        grid-column: basic-start / var(--pds-grid-basic-span-one-third);
+    }
+    .individual-items-discover:nth-child(2) {
+        grid-column: var(--pds-grid-basic-span-one-third) / var(--pds-grid-basic-span-one-third);
+    }
+    .individual-items-discover:nth-child(3){
+              grid-column: 12 / basic-end;
+    }
+    .discover-tile .container{
+      aspect-ratio: unset;
+    }
 }
