--- a/src/components/FeatureCardsSection/Cards.css
+++ b/src/components/FeatureCardsSection/Cards.css
@@ -14,10 +14,10 @@
     --pds-grid-basic-span-two-thirds: span 4;
     --pds-grid-extended-span-one-half: span 3;
     display: grid;
-    padding-bottom: clamp(32px,2.75vw + 23px,76px);
+    padding-bottom: clamp(32px, 2.75vw + 23px, 76px);
 }
 
-.individual-cars-container {
+.individual-cards-container {
     grid-column: basic-start/basic-end;
     aspect-ratio: 4 / 3;
     width: 100%;
@@ -30,7 +30,7 @@
     grid-template-areas: none;
 }
 
-.individual-cars-container img {
+.individual-cards-container img {
     width: 2560px;
     object-fit: cover;
     cursor: pointer;
@@ -124,6 +124,7 @@ p {
     grid-row-start: 1;
     grid-column-start: 1;
     grid-row-end: -1;
+    transition: scale .5s ease;
     grid-column-end: -1;
     z-index: 4;
     outline-width: 0px;
@@ -134,7 +135,31 @@ p {
     margin-block-end: 0;
     z-index: 10;
 }
-.individual-image-container:hover{
+
+.individual-image-container:hover {
     scale: 1.1;
-    transition: scale 1.2s cubic-bezier(0, 0, 0.2, 1)
+}
+
+@media (min-width:760px) {
+    .cards-container {
+        grid-template-columns: [full-start] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(2, minmax(0, 1fr)) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(2, minmax(0, 1fr)) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
+        --pds-internal-grid-safe-zone: calc(5vw - 16px);
+        --pds-grid-basic-span-one-half: span 6;
+        --pds-grid-basic-span-one-third: span 4;
+        --pds-grid-narrow-span-one-half: span 4;
+        --pds-grid-basic-span-two-thirds: span 8;
+        --pds-grid-extended-span-one-half: span 7;
+    }
+
+    .individual-cards-container:first-child {
+        grid-column: basic-start / var(--pds-grid-basic-span-one-third);
+    }
+
+    .individual-cards-container:nth-child(2) {
+        grid-column: var(--pds-grid-basic-span-one-third);
+    }
+
+    .individual-cards-container:nth-child(3) {
+        grid-column: var(--pds-grid-basic-span-one-third);
+    }
 }
