--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -90,7 +90,7 @@
 .menu-icon {
   grid-area: left;
   justify-self: start;
-  z-index: 200;
+  z-index: 900;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -190,4 +190,11 @@
     flex-direction: row;
     align-items: center;
     position: relative;
+}
+ .svg {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: inherit;
+    width: 600px;
 }
