--- a/src/components/FeatureCardsSection/Cards.css
+++ b/src/components/FeatureCardsSection/Cards.css
@@ -150,6 +150,18 @@ p {
         --pds-grid-basic-span-two-thirds: span 8;
         --pds-grid-extended-span-one-half: span 7;
     }
+}
+
+@media (min-width:1000px) {
+    .cards-container {
+        grid-template-columns: [full-start] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(2, minmax(0, 1fr)) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(2, minmax(0, 1fr)) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
+        --pds-internal-grid-safe-zone: calc(5vw - 16px);
+        --pds-grid-basic-span-one-half: span 6;
+        --pds-grid-basic-span-one-third: span 4;
+        --pds-grid-narrow-span-one-half: span 4;
+        --pds-grid-basic-span-two-thirds: span 8;
+        --pds-grid-extended-span-one-half: span 7;
+    }
 
     .individual-cards-container:first-child {
         grid-column: basic-start / var(--pds-grid-basic-span-one-third);
