--- a/src/components/Hero section/Hero.css
+++ b/src/components/Hero section/Hero.css
@@ -1,5 +1,8 @@
 .home-hero-section {
-  /* grid-template-rows: auto [headline-block] max-content [cta-block] minmax( var(--hero-grid-medium-height), max-content ) [disclaimer-block] max-content [scroll-indicator-block] max-content [bottom-spacing] var( --hero-grid-med-height ); */
+  grid-template-rows: auto [headline-block] max-content [cta-block] minmax(calc(clamp(16px, 1.25vw + 12px, 36px) + 54px),
+      max-content) [scroll-indicator-block] max-content [bottom-spacing] clamp(16px,
+      1.25vw + 12px,
+      36px);
   row-gap: 0;
   min-height: 100svh;
   position: relative;
@@ -8,82 +11,41 @@
   padding: 0;
   grid-gap: clamp(16px, 1.25vw + 12px, 36px);
   box-sizing: content-box;
-  grid-template-columns:
-    [full-start] minmax(
-      0,
-      var(
-        --pds-internal-grid-outer-column,
-        calc(var(--grid-internal-safe-zone) - clamp(16px, 1.25vw + 12px, 36px))
-      )
-    )
-    [wide-start extended-start basic-start narrow-start] repeat(
-      6,
-      minmax(0, 1fr)
-    )
-    [narrow-end basic-end extended-end wide-end] minmax(
-      0,
-      var(
-        --pds-internal-grid-outer-column,
-        calc(var(--grid-internal-safe-zone) - clamp(16px, 1.25vw + 12px, 36px))
-      )
-    )
-    [full-end];
   max-width: 2560px;
   min-width: 320px;
 }
-/* .home-hero-section {
-  grid-template-rows: auto [headline-block] max-content [cta-block] minmax(calc(clamp(16px, 1.25vw + 12px, 36px) + 54px), max-content) [scroll-indicator-block] max-content [bottom-spacing] clamp(16px, 1.25vw + 12px, 36px);
-  min-height: 100vh;
+.home-hero-section.blur {
   position: relative;
+  filter: blur(10px);
 }
-
+.home-hero-section.blur::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  pointer-events: none;
+}
 :where(.home-hero-section) {
-  display: grid;
-  margin: 0 var(--pds-internal-grid-margin, 0);
-  padding: 0 calc(50% - var(--pds-internal-grid-margin, 0px) - 1280px);
-  grid-gap: clamp(16px, 1.25vw + 12px, 36px);
-  box-sizing: content-box;
   grid-template-columns: [full-start] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start extended-start basic-start narrow-start] repeat(6, minmax(0, 1fr)) [narrow-end basic-end extended-end wide-end] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
-  max-width: var(--pds-internal-grid-width-max, 2560px);
-  min-width: var(--pds-internal-grid-width-min, 320px);
   --pds-internal-grid-safe-zone: max(22px, 10.625vw - 12px);
   --pds-grid-basic-span-one-half: span 3;
   --pds-grid-basic-span-one-third: span 2;
   --pds-grid-narrow-span-one-half: span 3;
   --pds-grid-basic-span-two-thirds: span 4;
   --pds-grid-extended-span-one-half: span 3;
-} */
-
-/* .home-hero-section::after{
-    background: linear-gradient(0deg, rgba(0, 0, 0, .8) 0, rgba(0, 0, 0, .8) 8.1%, rgba(0, 0, 0, .8) 15.5%, rgba(0, 0, 0, .8) 22.5%, rgba(0, 0, 0, .78) 29%, rgba(0, 0, 0, .73) 35.3%, rgba(0, 0, 0, .67) 41.2%, rgba(0, 0, 0, .6) 47.1%, rgba(0, 0, 0, .52) 52.9%, rgba(0, 0, 0, .44) 58.8%, rgba(0, 0, 0, .33) 64.7%, rgba(0, 0, 0, .22) 71%, rgba(0, 0, 0, .12) 77.5%, rgba(0, 0, 0, .05) 84.5%, rgba(0, 0, 0, .011) 91.9%, transparent);
-    content: "";
-    grid-column: full-start / full-end;
-    grid-row: headline-block / -1;
-    z-index: 2;
-    position: relative;
-    top: 250px;
-} */
-.hero-container {
-  grid-column: full-start / full-end;
-  grid-row: 1/-1;
-  box-sizing: border-box;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-  width: 100%;
 }
-
-/* .hide-hero{
-    opacity: 0;
-    visibility: hidden;
-} */
-/* .hero-image-container {
-  background-color: #fff;
-  inset: 0;
-  position: relative;
-  transition: visibility 0.25s ease-in 0s, opacity 0.25s ease-in 0s;
-  z-index: -1;
-} */
+.home-hero-section::after {
+  background: linear-gradient(0deg, rgba(0, 0, 0, .8) 0, rgba(0, 0, 0, .8) 8.1%, rgba(0, 0, 0, .8) 15.5%, rgba(0, 0, 0, .8) 22.5%, rgba(0, 0, 0, .78) 29%, rgba(0, 0, 0, .73) 35.3%, rgba(0, 0, 0, .67) 41.2%, rgba(0, 0, 0, .6) 47.1%, rgba(0, 0, 0, .52) 52.9%, rgba(0, 0, 0, .44) 58.8%, rgba(0, 0, 0, .33) 64.7%, rgba(0, 0, 0, .22) 71%, rgba(0, 0, 0, .12) 77.5%, rgba(0, 0, 0, .05) 84.5%, rgba(0, 0, 0, .011) 91.9%, transparent);
+  content: "";
+  grid-column: full-start/full-end;
+  grid-row: headline-block/-1;
+  z-index: 2;
+}
+.hero-container {
+  grid-column: full-start/full-end;
+  grid-row: 1/-1;
+}
 .hero-image-container img {
   height: 100svh;
   width: 100%;
@@ -91,7 +53,6 @@
   display: block;
   max-width: 100%;
 }
-
 .hero-video-container,
 .hero-image-container {
   --hero-media-width: 1.248;
@@ -110,6 +71,7 @@
   line-height: 1.5;
   max-width: 100%;
   min-width: 200px;
+  width: 100%;
   position: relative;
   height: 100svh;
   text-shadow: none;
@@ -117,7 +79,6 @@
   z-index: -1;
   inset: 0;
 }
-
 .hero-video {
   --pcom-background-video-width-multiplier: 1.3305000000000002;
   background: transparent;
@@ -132,7 +93,6 @@
   transform: translate(-50%, -50%);
   width: calc(100% * var(--pcom-background-video-width-multiplier, 1));
 }
-
 .hero-video-Video {
   border: 0;
   height: 100%;
@@ -140,18 +100,15 @@
   position: absolute;
   top: 0;
   width: 100%;
+  object-fit: cover;
 }
-
 .hero-header-container {
   padding-top: clamp(80px, 7.5vw + 56px, 200px);
   grid-column: extended-start/extended-end;
   z-index: 3;
-  grid-row: 5;
-  position: absolute;
-  top: 405px;
+  grid-row: headline-block;
   color: black;
 }
-
 .hero-header {
   transform: translate(0px);
   opacity: 1;
@@ -165,7 +122,6 @@
   -webkit-text-size-adjust: none;
   animation: heroUpAnimation 1.2s cubic-bezier(0, 0, 0.2, 1) forwards;
 }
-
 .gotoButton {
   display: flex;
   align-items: flex-start;
@@ -186,32 +142,15 @@
   background-color: transparent;
   color: #fbfcff;
   --p-internal-scaling-factor: 1;
-  transition: background-color var(--p-transition-duration, 0.25s)
-      cubic-bezier(0.25, 0.1, 0.25, 1),
-    border-color var(--p-transition-duration, 0.25s)
-      cubic-bezier(0.25, 0.1, 0.25, 1),
+  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1),
+    border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1),
     color var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1);
-  padding: calc(
-      var(--p-internal-link-scaling, var(--p-internal-scaling-factor)) * 0.8125 *
-        16px
-    )
-    max(
-      calc(
-        var(--p-internal-link-scaling, var(--p-internal-scaling-factor)) * 1.625 *
-          16px
-      ),
-      4px
-    );
-  gap: clamp(
-    2px,
-    calc(
-      var(--p-internal-link-scaling, var(--p-internal-scaling-factor)) * 0.5 *
-        16px
-    ),
-    16px
-  );
+  padding: calc(var(--p-internal-link-scaling, var(--p-internal-scaling-factor)) * 0.8125 * 16px) max(calc(var(--p-internal-link-scaling, var(--p-internal-scaling-factor)) * 1.625 * 16px),
+      4px);
+  gap: clamp(2px,
+      calc(var(--p-internal-link-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px),
+      16px);
 }
-
 .label {
   position: static;
   width: auto;
@@ -222,36 +161,26 @@
   clip: unset !important;
   white-space: normal;
 }
-
 .small-description-item {
-  /* grid-row: disclaimer-block;
-    padding-top: clamp(16px,1.25vw + 12px,36px);
-    z-index: 3;
-    grid-column: basic-start / basic-end;
-     */
   position: absolute;
   top: 601.5px;
 }
-
+.gotomodel-button {
+  margin: 0;
+}
 .small-description {
   color: #afb0b3;
   font-family: "reg";
   padding-inline: 25px;
   line-height: calc(6px + 2.125ex);
 }
-
 .video-pause-play-button {
-  opacity: 0;
-  position: absolute;
-  top: 705.5px;
-  right: 28px;
+  grid-column: span 1/wide-end;
+  grid-row: -3/-2;
+  place-self: end end;
+  z-index: 3;
   animation: videoPlayerAnimation 0.4s ease forwards;
-  /* grid-column: span 1 / wide-end;
-    grid-row: -3 / -2;
-    place-self: end end;
-    z-index: 3; */
 }
-
 @keyframes videoPlayerAnimation {
   0% {
     opacity: 0;
@@ -263,7 +192,6 @@
     transform: translate(0);
   }
 }
-
 @keyframes animationListPrimary {
   0% {
     transform: rotateZ(0deg);
@@ -273,96 +201,106 @@
     transform: rotateZ(0deg);
   }
 }
-
 .video-play_pause-button {
   outline: 2px solid transparent;
   background: transparent;
   outline-offset: 2px;
-  /* heigh tissue is there */
   padding: 0;
   appearance: none;
   border: 2px solid #ebebeb;
   box-sizing: border-box;
   transform: translateZ(0);
-  /* transition: background-color var(--pcom-transition-duration) ease, border-color var(--pcom-transition-duration) ease, color var(--pcom-transition-duration) ease; */
 }
-
 .icon-container {
-  filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg)
-    brightness(110%) contrast(110%);
+  filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg) brightness(110%) contrast(110%);
   visibility: inherit;
   vertical-align: top;
   color-scheme: light dark !important;
+  margin-block: 0;
+  width: 24px;
 }
-
 .icon-container img {
   display: block;
   margin: 0px;
   padding: 0px;
   pointer-events: none;
-  filter: var(
-    --p-internal-icon-filter,
-    invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%)
-      contrast(103%)
-  );
+  filter: var(--p-internal-icon-filter,
+      invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%));
   animation: 1ms ease 0s 1 normal none running animationListPrimary;
   width: calc(2.125ex + 6px);
   height: calc(2.125ex + 6px);
   font: 1rem "reg";
 }
-
 .icon_arrow {
   position: relative;
   flex-shrink: 0;
   width: calc(6px + 2.125ex);
   height: calc(6px + 2.125ex);
 }
-
 @supports (width: round(down, 1px, 1px)) {
   .icon {
     width: round(down, calc(6px + 2.125ex), 1px);
     height: round(down, calc(6px + 2.125ex), 1px);
   }
 }
-
 .icon_arrow img {
   display: block;
   margin: 0;
   padding: 0;
   pointer-events: none;
-  filter: var(
-    --p-internal-icon-filter,
-    invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%)
-      contrast(103%)
-  );
+  filter: var(--p-internal-icon-filter,
+      invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%));
   -webkit-animation: rerender-light-primary 1ms;
   animation: rerender-light-primary 1ms;
   width: inherit;
   height: inherit;
 }
-@media (min-width: 1000px) {
+@media (min-width: 760px) {
   .hero-header-container {
     padding-top: clamp(32px, 2.75vw + 23px, 76px);
     grid-row: headline-block;
+    grid-column: extended-start/var(--pds-grid-extended-span-one-half);
   }
-  .home-hero-section {
-    grid-template-rows: auto [headline-block] max-content [cta-block] minmax(
-        var(--pcom-expected-cta-block-height),
-        max-content
-      ) [scroll-indicator-block] max-content [bottom-spacing] var(
-        --pcom-spacing-medium
-      );
-    min-height: 100vh;
-    position: relative;
+  .gotomodel-container {
+    grid-row: scroll-indicator-block;
+    z-index: 3;
+    grid-column: extended-start/var(--pds-grid-extended-span-one-half);
+  }
+  .gotomodel-button {
+    width: 160px;
+    margin: 0;
+  }
+   .hero-container .hero-video-container{
+        width:100%
+    }
+  .video-pause-play-button {
+    grid-column: span 1 / wide-end;
+    grid-row: -3/-2;
+    place-self: end end;
+    z-index: 3;
+    position: unset;
+  }
+  .video-play_pause-button {
+    padding: 13px;
+  }
+  .blur{
+    filter: blur(10px);
   }
 }
 @media (min-width: 760px) {
-}
-.home-hero-section {
-  grid-template-areas:
-    "a a a a a a a a"
-    "b b b b b b b ."
-    "c c c c c c c c"
-    "d d d d e e e e"
-    "f f f . g g g g";
+  .home-hero-section {
+    grid-template-columns: [full-start] minmax(0,
+        var(--pds-internal-grid-outer-column,
+          calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(2,
+        minmax(0, 1fr)) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(2,
+        minmax(0, 1fr)) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(0,
+        var(--pds-internal-grid-outer-column,
+          calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
+    --pds-internal-grid-safe-zone: calc(5vw - 16px);
+    --pds-grid-basic-span-one-half: span 6;
+    --pds-grid-basic-span-one-third: span 4;
+    --pds-grid-narrow-span-one-half: span 4;
+    --pds-grid-basic-span-two-thirds: span 8;
+    --pds-grid-extended-span-one-half: span 7;
+  }
 }
