--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -204,7 +204,10 @@
 }
 
 @media (min-width:768px) {
-   
+   .porsche-logo-container{
+      max-width: unset !important;
+  max-height: unset !important;
+   }
     .header-dark-theme .nav-container{
         grid-template-columns: [full-start] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0, 1fr) [extended-start] minmax(0, 1fr) [basic-start] repeat(2, minmax(0, 1fr)) [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(2, minmax(0, 1fr)) [basic-end] minmax(0, 1fr) [extended-end] minmax(0, 1fr) [wide-end] minmax(0, var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
         --pds-internal-grid-safe-zone: calc(5vw - 16px);
@@ -240,5 +243,8 @@
     }
     .block-size{
       block-size: 148px;
+    }
+    .porsche-logo-container svg{
+      width: 70%;
     }
 }
