--- a/src/components/ModelOverview/ModelOverview.css
+++ b/src/components/ModelOverview/ModelOverview.css
@@ -45,6 +45,7 @@
 
 .filter-button-container {
     top: 0;
+    z-index: 1;
     grid-column: wide;
     padding: clamp(8px, .5vw + 6px, 16px) 0 clamp(32px, 2.75vw + 23px, 76px);
     background: linear-gradient(to bottom, #eeeff2, #eeeff200);
@@ -405,9 +406,9 @@ input:checked {
 }
 
 .reset-apply-container {
-    box-shadow: rgba(204, 204, 204, 0.35) 0 -5px 10px;
     position: sticky;
     bottom: -.1px;
+    padding: 20px;
     transform: translateZ(0);
     padding-block: 16px clamp(32px, 2.75vw + 23px, 76px);
     margin-block: -16px -16px;
@@ -481,4 +482,59 @@ input:checked {
     gap: clamp(2px, calc(var(--p-internal-button-scaling, var(--p-internal-scaling-factor)) * 0.5 * 16px), 16px);
     cursor: pointer;
     margin: 0;
+}
+@media (min-width:480px){
+    .filter-button{
+                flex-flow: row wrap;
+                width: unset;
+        align-items: center;
+    }
+}
+@media (min-width:768px) {
+    :where(.main-section){
+        padding-top: calc(var(--pcom-spacing-large) + var(--phn-header-height, 0));
+        grid-template-columns: [full-start] minmax(0,var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0,1fr) [extended-start] minmax(0,1fr) [basic-start] repeat(2,minmax(0,1fr)) [narrow-start] repeat(8,minmax(0,1fr)) [narrow-end] repeat(2,minmax(0,1fr)) [basic-end] minmax(0,1fr) [extended-end] minmax(0,1fr) [wide-end] minmax(0,var(--pds-internal-grid-outer-column, calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end];
+                --pds-internal-grid-safe-zone: calc(5vw - 16px);
+        --pds-grid-basic-span-one-half: span 6;
+        --pds-grid-basic-span-one-third: span 4;
+        --pds-grid-narrow-span-one-half: span 4;
+        --pds-grid-basic-span-two-thirds: span 8;
+        --pds-grid-extended-span-one-half: span 7;
+    }
+}
+@media (min-width:1000px){
+    .filter-button-container{
+        display: none;
+    }
+    .fitler-model-sections{
+        height: 100%;
+    }
+    .model-header{
+        padding-bottom: clamp(32px, 2.75vw + 23px, 76px);
+    }
+    .filter-container{
+        opacity: 1;
+        transform: translateY(0);
+        position: relative;
+        overflow: hidden;
+        background: transparent;
+        grid-column: wide-start/span 4;
+        column-gap: unset;
+        z-index: 1000;
+    }
+    .filter-close-button-container{
+        display: none;
+    }
+    .apply-button{
+        display: none;
+    }
+    .reset-apply-container{
+        background: transparent;
+    }
+    .models-overview-container{
+        grid-template-columns: repeat(auto-fit,minmax(330px,1fr));
+    }
+    .car-models-section{
+        grid-column: span 12/wide-end;
+    }
 }
